--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   "dependencies": {
     "element-ui": "^2.4.3",
     "highlight.js": "^9.12.0",
-    "node-sass": "^4.11.0",
+    "node-sass": "^4.14.1",
+    "nprogress": "^0.2.0",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1"
